// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props should render correctly 1`] = `
<hr
  aria-orientation="horizontal"
  class="wp-components-divider wp-components-separator css-15oxbod"
  data-g2-c16t="true"
  data-g2-component="Separator"
  role="separator"
/>
`;

exports[`props should render margin 1`] = `
<hr
  aria-orientation="horizontal"
  class="wp-components-divider wp-components-separator css-ebhqbn"
  data-g2-c16t="true"
  data-g2-component="Separator"
  role="separator"
/>
`;

exports[`props should render marginBottom 1`] = `
<hr
  aria-orientation="horizontal"
  class="wp-components-divider wp-components-separator css-9chfwj"
  data-g2-c16t="true"
  data-g2-component="Separator"
  role="separator"
/>
`;

exports[`props should render marginTop 1`] = `
<hr
  aria-orientation="horizontal"
  class="wp-components-divider wp-components-separator css-1qj2ib0"
  data-g2-c16t="true"
  data-g2-component="Separator"
  role="separator"
/>
`;
